--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -9,7 +9,40 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
+        /*
+        const second = () => {
+            setTimeout(() => {
+                console.log('Async Hey there');
+            }, 2000);
+        }
+        const first = () => {
+            console.log('Hey there');
+            second();
+            console.log('The end');
+        }
+
+        first();
+        */
+
+
+        function getRecipe() {
+            setTimeout(() => {
+                const recipeID = [543, 663, 356, 976];
+                console.log(recipeID);
+
+                setTimeout((id) => {
+                    const recipe = {title: 'Fresh tomato pasta', publisher: 'Jonas'};
+                    console.log(`${id}: ${recipe.title}`);
+
+                    setTimeout(publisher => {
+                        const recipe2 = {title: 'Italian Pizza', publisher: 'Jonas'};
+                    }, 1500, recipe.publisher);;
+                }, 1000, recipeID[2]);
+
+            }, 1500);
+        }
         
+        getRecipe();
     </script>
 </body>
 </html>
